--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dio: ^5.8.0+1
   riverpod: ^2.6.1
   flutter_riverpod: ^2.6.1
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
