--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   riverpod: ^2.6.1
   flutter_riverpod: ^2.6.1
   flutter_inappwebview: ^6.1.5
+  geolocator: ^14.0.0
 
 dev_dependencies:
   flutter_test:
