--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,4 +22,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-  uses-material-design: true
+  uses-material-design: 
+  
+  assets:
+    - .env
