--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-  uses-material-design: 
-  
+  uses-material-design: true
   assets:
     - .env
