--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   geolocator: ^14.0.0
   flutter_dotenv: ^5.2.1
+  flutter_naver_map: ^1.1.1
 
 dev_dependencies:
   flutter_test:
