--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 VWORLD_KEY = "833FB49C-4B1A-3E24-B36E-058256B640FC"
 X_NAVER_CLIENT_ID = "qqpTyfi_nXUhZSsPI0JT"
 X_NAVER_CLIENT_SECRET = "KqzUVCijJh"
+
+Client ID
+(X-NCP-APIGW-API-KEY-ID)
+fkmu53u8lb
+Client Secret
+(X-NCP-APIGW-API-KEY)
+ZUdmuqsfR12YXsIjjt5pcsqD3pO2T2jC0f4BR50e
